--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -194,14 +194,12 @@ en:
       selected_file: Selected file
 
   session:
-    new:
+    user_password:
       title: Log in
-      description: Please enter your username and password to access cryptopus
       submit: Login
     local:
       new:
         title: Log in
-        description: Please enter your password to access cryptopus
         submit: Login
     oidc:
       sleep: I'm currently asleep to protect your precious data from session thieves. Feel free to wake me up any time
