Fix object Object error messages, refs: #352

--- a/config/locales/ch_be.yml
+++ b/config/locales/ch_be.yml
@@ -320,6 +320,7 @@ ch_be:
         infinite: Eewigs
 
   flashes:
+    something_went_wrong: Öppis isch fautsch gloffe
     api:
       admin:
         users:
