Move profile to ember, refs: #366

--- a/config/locales/de.yml
+++ b/config/locales/de.yml
@@ -277,7 +277,7 @@ de:
 
   profile:
     index:
-      title: "Profil von %{label}"
+      title: Profil
     info:
       info: Info
       last_login_at: Letztes Login um
