--- a/frontend/translations/ch_be.yml
+++ b/frontend/translations/ch_be.yml
@@ -391,6 +391,9 @@ ch_be:
         succeed: D Wartigsufgab isch erfougrich düregfüehrt worde
         failed: D Wartigsufgab isch gschiteret. Lueg i de Logs für me Details nache.
 
+    user-humen:
+      created: Dr nöi Benutzer isch erfougrich ersteut worde.
+      updated: Dr Benutzer isch erfougrich aktualisiert worde.
     accounts: &accounts_translations
       created: Dr nöi Account isch erfougrich ersteut worde.
       updated: Dr Account isch erfougrich aktualisiert worde.
@@ -581,3 +584,12 @@ ch_be:
       too_long: Dr Benutzername isch zläng
     cleartext password:
       too_long: Ds Passwort isch zläng
+    username:
+      present: Dr Benutzername muess vorhande si
+      too_long: Dr Benutzername isch zläng
+    surname:
+      present: Dr Nachname muess vorhande si
+    givenname:
+      present: Dr Vorname muess vorhande si
+    password:
+      present: Ds Passwort muess vorhande si
