--- a/frontend/translations/de.yml
+++ b/frontend/translations/de.yml
@@ -27,7 +27,8 @@ de:
   version: Version
   forgot_password: Passwort vergessen?
   logout: Abmelden
-  auto_logout: automatisches Abmelden in
+  auto_logout: Automatische Abmeldung in
+  contribute_on_github: Mitwirken auf GitHub
   settings: Einstellungen
   recrypt_requests: Recrypt Anfragen
   users: Benutzer
@@ -345,7 +346,7 @@ de:
       members:
         added: Mitglied wurde erfolgreich hinzugefügt
         removed: Mitglied wurde erfolgreich entfernt
-      errors: 
+      errors:
         auth_failed: Authentifizierung fehlgeschlagen
         user_not_logged_in: Benutzer ist nicht eingeloggt
         invalid_request: Invalide Anfrage
