--- a/config/locales/ch_be.yml
+++ b/config/locales/ch_be.yml
@@ -141,6 +141,17 @@ ch_be:
       index:
         title: Istellige bearbeite
         save: Änderige spichere
+        ldap: Ldap Verbindung testen
+        whitelisted_countries: Länder Whitelist
+        whitelisted_ips: IP Whitelist
+        whitelist_placeholder_geo_ip_deactivated: Faus keini IP's ahgäh sind wärde aui IP's erloubt
+        no_ips_selected: Fauses nit witer spezifiziert isch sind nor privati u Whitelist IP-Adrässe autorisiert
+        specify_single_ip: Einzelni IP-Adrässe chöi wie fougt ihgäh wärde
+        range:
+          specify_range_of_ips: Zum ä Spannwiiti z definiere chane IP-Adrässe mit de Subnetzmaske ihgäh wärde
+          range_between: Ds entspricht dr Spannwiiti zwösche
+          and: u
+        IPv6_allowed: IPv6 isch erloubt u cha wie fougt ihgäh wärde
     recryptrequests:
       uncrypterror:
         new_password: Nöis Passwort?!
@@ -323,6 +334,11 @@ ch_be:
           toggle:
             empowered: "%{username} het ab iz Admin-Rächt"
             disempowered: "Am Benutzer %{username} si d Admin-Rächt entzoge worde"
+        settings:
+          test_ldap_connection:
+            successful: "Verbindig zum Ldap Server %{hostname} erfougrich"
+            failed: "Verbindig zum Ldap Server %{hostname} fäugschlage"
+            no_hostname_present: "S isch kein Hostname vorhange"
       api-users:
         create: "%{username} isch ersteut worde"
         update:
