--- a/config/locales/ru.yml
+++ b/config/locales/ru.yml
@@ -85,6 +85,21 @@ ru:
       index:
         title: "Редактировать настройки"
         save: "Сохранить настройки"
+    recryptrequests:
+      uncrypterror:
+        new_password: "Новый пароль?!"
+        ldap_password_changed: "Ваш LDAP пароль был изменен с момента вашего последнего входа."
+        ldap_enter_old_password: "Пожалуйста, введите ваш старый LDAP пароль чтобы расшифровать ваш личный ключ."
+        ldap_old_password: "Ваш старый LDAP пароль"
+        ldap_new_password: "Ваш новый LDAP пароль"
+        ldap_password: "Ваш LDAP пароль"
+        forgot_password_recrypt: |
+          Если вы забыли ваш старый пароль, то только не приватные команды будут расшифрованы.
+          Все приватные команды, которые станут ни для кого недоступны, будут удалены.
+          После отправки запроса вам придётся подождать, пока администратор не расшифрует ваши пароли.
+        recrypt: "Перешифровать"
+        send: "Отправить запрос"
+
     users:
       index_menu:
         create: "Создать нового пользователя"
