added hide side-nav-bar, format dropdown and add authProvider to Provider UID column

--- a/frontend/translations/en.yml
+++ b/frontend/translations/en.yml
@@ -155,6 +155,7 @@ en:
         title: Cryptopus users
         username: Username
         name: Name
+        auth: AUTH
         provider_uid: PROVIDER UID
         last_login_at: Last login at
         last_login_from: Last login from
