--- a/frontend/translations/en.yml
+++ b/frontend/translations/en.yml
@@ -325,7 +325,7 @@ en:
             admin: "Updated User is now an admin"
           destroy:
             own_user: "You can't delete yourself"
-            success: "Deleted user %{username}"
+            success: "User succefully deleted"
           no_access: "Access denied"
         settings:
           test_ldap_connection:
