--- a/frontend/translations/fr.yml
+++ b/frontend/translations/fr.yml
@@ -156,6 +156,7 @@ fr:
         title: Utilisateur de Cryptopus
         username: Nom d'utilisateur
         name: Nom
+        auth: AUTH
         provider_uid: PROVIDER UID
         last_login_at: Dernière connexion à
         last_login_from: Dernière connexion de
@@ -325,6 +326,7 @@ fr:
             disempowerd: L'utilisateur a perdu les droits d'administrateur
           destroy:
             own_user: Actuel de l'utilisateur ne peut pas être supprimé
+            success: "L'utilisateur d'Api supprimé avec succès"
           no_access: Accès refusé
         settings:
           test_ldap_connection:
